--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.542.0",
